--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
   
   <div class="confirm-order-div">
-    <img src="./assets/images/icon-order-confirmed.svg" >
+    <img src="./assets/images/icon-order-confirmed.svg"  alt="">
     <h2>Order Confirmed</h2>
     <p class="grey">We hope you enjoy your food</p>
     <div class="container-confirmer"> </div>
